css/pages/header.css
header {
  background-image: linear-gradient(to bottom right,var(--background-gradient-first), var(--background-gradient-second));
  padding: 1em;
  box-shadow:	0 0.125rem 0.5rem var(--container-primary-shadow), 0 0.0625rem 0.125rem var(--container-secondary-shadow);
}

header h1, h2{
  margin: 0;
}

header h1 {
  font-family: 'Lobster', cursive;
  font-weight: normal;
}

header h2{
  font-style: italic;
  font-size: small;
}

header #name-slogan{
  padding-right: 1em;
  border-right: 1px solid var(--header-border);
}

.mobile-header button{
  display: none;
}

.mobile-search-bar button{
  display: none;
}

header #right-side{
  margin-left: auto;
  margin-right: 5em;
}

header #search-bar, 
header #right-side #settings{
  margin-right: 3em;
}

header #right-side #settings{
  padding-top: 1em;
}

header #search-bar {
  margin-left: 3em;
}

/* SEARCH BAR */
#search-bar #advanced-search-bar a{
  font-size: small;
}

#search-bar input[type="text"] {
  width: 20em;
  padding: 0.2em;
  background-color: var(--search-background-color);
}

#search-bar button[type="submit"]{
  border: none;
  padding: 0.3em;
  color: var(--search-background-icon);
  background-color: var(--search-background-color);
}

#search-bar .mobile-search-bar button{
  padding-top: 1em;
}

header #signed-in{
  position: relative;
  display: inline-block;
}

header #dropdown{
  display: none;
  position: absolute;
  background-color: var(--dropdown-color);
  min-width: 10em;
  box-shadow: 0px 1em 2em 0px var(--container-secondary-shadow);
  z-index: 1;
}

header #dropdown a {
  color: var(--dropdown-href-a);
  padding: 1em 0.5em;
  text-decoration: none;
  display: block;
  text-align: left;
}

header #dropdown a:hover {
  background-color: var(--dropdown-hover);
}

header #signed-in:hover #dropdown{
  display: block;
}

body > header #sign-up a:first-child {
  border-right: 1px solid var(--header-border);
}

body > header #sign-up a {
  padding: 0 1em;
}

body > header #sign-up a:first-child {
  padding-left: 0;
}

/* -------------- RESPONSIVE HEADER -------------- */

@media screen and (max-width: 1000px){
  header #name-slogan h2{
    display: none;
  }
  header #search-bar button,
  header #search-bar input{
    display: none;
  }
  header #right-side #settings{
    padding-top: .5em;
  }
  #advanced-search-bar {
    padding-top: .5em;
  }
}

@media screen and (max-width: 650px){
  header #name-slogan h1{
    display: none;
  }
  #advanced-search-bar {
    display: none;
  }
  .mobile-header button,
  #search-bar .mobile-search-bar button{
    display: block;
    background-color: transparent;
    border: none;
    color: var(--icon-mobile);
  }
  .mobile-header button:hover,
  #search-bar .mobile-search-bar button:hover{
    border: none;
  }
  header #search-bar {
    margin-left: 1em;
  }
  header #name-slogan{
    border-right: none;
  }
}

.dark-mode-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.dark-mode-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  content: "\f058";
  color: black;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

